--- a/GuestHouse/about.html
+++ b/GuestHouse/about.html
@@ -13,8 +13,9 @@
 <title>Гостевой дом - недорогой отдых в Бердянске</title>
 <!-- CSS Files-->
 <link rel="stylesheet" href="stylesheets/style.css">
-
-<link rel="stylesheet" href="stylesheets/skins/blue.css">
+<link rel="stylesheet" href="stylesheets/cust.css">
+<link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+<link rel="stylesheet" href="stylesheets/skins/orange.css">
 <!-- skin color -->
 <link rel="stylesheet" href="stylesheets/responsive.css">
 <!-- IE Fix for HTML5 Tags -->
@@ -30,7 +31,7 @@
 	<div class="headerlogo four columns">
 		<div class="logo">
 			<a href="index.html">
-			<h4>Гостевой дом <span class="tel">+38 (050) 256 51 10</span></h4>
+			<h4>Гостевой дом «Азовец» <br> <span class="tel">+38 (050) 256 51 10</span></h4>
 			</a>
 		</div>
 	</div>
@@ -41,7 +42,7 @@
 			<a href="index.html">Главная</a>
 			</li>
 			<li>
-			<a href="rooms2.html">Номера и цены</a>
+			<a href="rooms.html">Номера и цены</a>
 			<ul>
 				<li><a href="portofoliodetail.html">Полулюкс</a></li>
 				<li><a href="portofoliodetail1.html">Полулюкс мансардный</a></li>
@@ -55,6 +56,7 @@
 			<ul>
 				<li><a href="about.html">О нас</a></li>
 				<li><a href="services.html">Услуги</a></li>
+				<li><a href="rules.html">Правила</a></li>
 			</ul>
 			</li>
 		
@@ -89,47 +91,65 @@
 	<div class="eight columns">
 	    <!-- Our History-->
 		<div class="sectiontitle">
-			<h4>Наша история</h4>
-		</div>
+			<h4>Немножко о нас</h4>
+		</div><br>
 		<p>
-			 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat repellendus voluptatem dolor, recusandae quos tempore facere tenetur quo distinctio, qui officiis? Ullam quibusdam rem totam adipisci mollitia ab atque quas inventore, modi culpa quam consectetur temporibus! Nam perferendis, quos suscipit voluptates inventore, ipsum blanditiis est excepturi. Fugiat quas illo, sint.
+			 <strong>Гостевой дом «Азовец»</strong> — это современный комплекс, предлагающий Вам и Вашим близким комфортабельное размещение и <strong>проживание на берегу Азовского моря</strong>. <p><strong>Уют, забота, дружелюбный персонал</strong> сделают Ваше пребывание в нашем Гостевом доме незабываемым.</p> 
+
+			<p><strong>Проживание в Бердянске в Гостевом доме «Азовец»</strong> будет интересным для молодоженов, предпочитающих романтику, для семейного отдыха с 			детьми и влюбленных пар, для бизнесменов и работающих, а также для всех, кто ценит качественный отдых и европейское обслуживание.</p> 
+			<p>Сочетание оптимальных цен, уровня комфорта и уникальное месторасположение недалеко от берега Азовского моря позволяет нам рассчитывать на Ваш интерес к 			размещению именно в номерах нашего Гостевого дома.</p> 
+
 		</p>
 		<p>
-			 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, quibusdam!
-		</p>
+			 Современный Гостевой дом «Азовец» открылся в 2009 году и продолжает дарить гостям незабываемый отдых. <br>Мы находимся недалеко от моря в уютном и тихом районе города Бердянска.
+		</p><p>Максимальный уровень комфорта, отличный сервис и только приятные впечатления ждут вас в наших номерах </p>
 		
 			<br/>
 		<!-- Accordion-->
 		<dl class="tabs">
 			<dd class="active"><a href="#simple1">Нас выбирают</a></dd>
-			<dd><a href="#simple3">Нам доверяют</a></dd>
+			<dd><a href="#simple3">Почему Бердянск</a></dd>
 			
 		</dl>
 		<ul class="tabs-content">
 			<li class="active" id="simple1Tab">
 			<p>
-				 This is simple tab 1's content. Pretty neat, huh? Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et non ex maxima parte de tota iudicabis? Item de contrariis, a quibus ad genera formasque generum.
-			</p>
-			<p>
-				 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et non ex maxima parte de tota iudicabis? Item de contrariis, a quibus ad genera formasque generum venerunt. Sit enim idem caecus, debilis. Duo Reges: constructio interrete.
-			</p>
-			<p>
-				 Sit enim idem caecus, debilis. Duo Reges: constructio interrete.
-			</p>
+				 Вот несколько причин, по которым нас выбирают:
+		<p>Мы работаем для Вас! Наш персонал ждет встречи с Вами и постарается сделать отдых в Бердянске беззаботным</p>
+		<p><i class="fa fa-check-square-o"></i> Своя территория</p>
+		<p><i class="fa fa-check-square-o"></i> Просторные номера</p>
+		<p><i class="fa fa-check-square-o"></i> Парковка</p>
+		<p><i class="fa fa-check-square-o"></i> Wi-Fi </p>
+		<p><i class="fa fa-check-square-o"></i> Охраняемая автостоянка</p>
+		<p><i class="fa fa-check-square-o"></i> Европейская кухня</p>
+
 			</li>
-			<li id="simple2Tab">This is simple tab 2's content. Now you see it! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et non ex maxima parte de tota iudicabis? Item de contrariis, a quibus ad genera formasque generum.</li>
-			<li id="simple3Tab">This is simple tab 3's content. It's, you know...okay. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et non ex maxima parte de tota iudicabis? Item de contrariis, a quibus ad genera formasque generum.</li>
-			<li id="simple4Tab">This is simple tab 3's content. It's, you know...okay. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et non ex maxima parte de tota iudicabis? Item de contrariis, a quibus ad genera formasque generum.</li>
+			
+			<li id="simple3Tab">
+			<p><strong>Пять причин для отдыха в Бердянске</strong></p>
+			<p><strong><i class="fa fa-check-square-o"></i> Доступные цены для Всех</strong></p>
+			<p><strong><i class="fa fa-check-square-o"></i> Оздоровительные процедуры</strong></p>
+			<p><strong><i class="fa fa-check-square-o"></i> Самый большой в Украине Аквапарк</strong></p>
+			<p><strong><i class="fa fa-check-square-o"></i> Теплое море и бескрайние песчаные пляжи</strong></p>
+			<p><strong><i class="fa fa-check-square-o"></i> Развитая развлекательная инфраструктура</strong></p>
+			<p><strong>Бердянск</strong> — это слово, которое всегда вызывает легкий трепет, как у местных жителей, так и приезжих отдыхающих. Словом сказать, любой, кто когда-либо посетил город Бердянск, имел за честь быть с ним знакомым, проживает в нем, всегда с любовью говорит об этой жемчужине у моря.</p>
+			<p><strong>Город Бердянск</strong> – идеальное место для отдыха. 
+			<br>Отдых в Бердянске всей семьей, с любимым человеком, проведение медового месяца в Бердянске, отдых шумной студенческой компанией – это именно тот вариант, когда приятные моменты жизни можно совместить с возможностями «кошелька» и не пожалеть об этом ни на секундочку</p>
+			</li>
+			
 		</ul>
 	</div><!-- end main content-->
 
 	<!-- SIDEBAR-->
 	<div class="four columns">
 		<div class="teamwrap teambox">
-			<img src="images/house.jpg" style="width: 100%" alt="">
+			<img src="images/dom.jpg" style="width: 100%" alt="">
 		</div>
 			<div class="teamwrap teambox">
-				<img src="images/beach1.jpg" style="width: 100%" alt="">
+				<img src="images/roomm1.jpg" style="width: 100%" alt="">
+			</div>
+			<div class="teamwrap teambox">
+				<img src="images/plyazh.jpg" style="width: 100%" alt="">
 			</div>
 			
 	</div><!-- end sidebar -->
