--- a/GuestHouse/index.html
+++ b/GuestHouse/index.html
@@ -14,8 +14,9 @@
 <title>Гостевой дом - недорогой отдых в Бердянске</title>
 <!-- CSS Files-->
 <link rel="stylesheet" href="stylesheets/style.css">
-
-<link rel="stylesheet" href="stylesheets/skins/blue.css">
+<link rel="stylesheet" href="stylesheets/cust.css">
+<link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+<link rel="stylesheet" href="stylesheets/skins/orange.css">
 <!-- skin color -->
 <link rel="stylesheet" href="stylesheets/responsive.css">
 <!-- IE Fix for HTML5 Tags -->
@@ -31,7 +32,7 @@
 	<div class="headerlogo four columns">
 		<div class="logo">
 			<a href="index.html">
-			<h4>Гостевой дом <span class="tel">+38 (050) 256 51 10</span></h4>
+			<h4>Гостевой дом «Азовец» <br> <span class="tel">+38 (050) 256 51 10</span></h4>
 			</a>
 		</div>
 	</div>
@@ -42,7 +43,7 @@
 			<a href="index.html">Главная</a>
 			</li>
 			<li>
-			<a href="rooms2.html">Номера и цены</a>
+			<a href="rooms.html">Номера и цены</a>
 			<ul>
 				<li><a href="portofoliodetail.html">Полулюкс</a></li>
 				<li><a href="portofoliodetail1.html">Полулюкс мансардный</a></li>
@@ -56,6 +57,7 @@
 			<ul>
 				<li><a href="about.html">О нас</a></li>
 				<li><a href="services.html">Услуги</a></li>
+				<li><a href="rules.html">Правила</a></li>
 			</ul>
 			</li>
 		
@@ -83,7 +85,7 @@
 		<img src="images/plyazh.jpg" alt="image02" class="responsiveslide">
 		<div class="ei-title">
 			<h2>Наслаждаться</h2>
-			<h3>Мореv</h3>
+			<h3>Морем</h3>
 		</div>
 		</li>
 		<li>
