--- a/GuestHouse/portofoliodetail1.html
+++ b/GuestHouse/portofoliodetail1.html
@@ -13,8 +13,9 @@
 <title>Гостевой дом - недорогой отдых в Бердянске</title>
 <!-- CSS Files-->
 <link rel="stylesheet" href="stylesheets/style.css">
-
-<link rel="stylesheet" href="stylesheets/skins/blue.css">
+<link rel="stylesheet" href="stylesheets/cust.css">
+<link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+<link rel="stylesheet" href="stylesheets/skins/orange.css">
 <!-- skin color -->
 <link rel="stylesheet" href="stylesheets/responsive.css">
 <!-- IE Fix for HTML5 Tags -->
@@ -29,7 +30,7 @@
 	<div class="headerlogo four columns">
 		<div class="logo">
 			<a href="index.html">
-			<h4>Гостевой дом <span class="tel">+38 (050) 256 51 10</span></h4>
+			<h4>Гостевой дом «Азовец» <br> <span class="tel">+38 (050) 256 51 10</span></h4>
 			</a>
 		</div>
 	</div>
@@ -40,7 +41,7 @@
 			<a href="index.html">Главная</a>
 			</li>
 			<li>
-			<a href="rooms2.html">Номера и цены</a>
+			<a href="rooms.html">Номера и цены</a>
 			<ul>
 				<li><a href="portofoliodetail.html">Полулюкс</a></li>
 				<li><a href="portofoliodetail1.html">Полулюкс мансардный</a></li>
@@ -54,6 +55,7 @@
 			<ul>
 				<li><a href="about.html">О нас</a></li>
 				<li><a href="services.html">Услуги</a></li>
+				<li><a href="rules.html">Правила</a></li>
 			</ul>
 			</li>
 		
@@ -86,9 +88,10 @@
 	<!-- PROJECT DESCRIPTION-->
 	<div class="six columns room">
 		<div class="sectiontitle">
-			<h4>Мансардный полулюкс  Цена:<span class="price"> 300,00 грн</span></h4>
+			<h4>Мансардный полулюкс</h4>
 		</div>
-		<p>Просторные номера (22 кв.м.)расположенные на мансардном этаже: рассчитаны на 2х - 3х человек.
+		<br>
+		<p>В этом номере преобладает элегантная простота и уют, чтобы Ваш отдых в Бердянске был максимально комфортным и беззаботным. Номер оформлен в светлых тонах, что придает ощущение объема, легкости, пространства и света. Данная категория находиться на мансардном этаже. Площадь номера составляет примерно 22 м.кв. Этот номер оснащен двуспальной кроватью с комфортным матрасом, современной мебелью — всем, что необходимо для избавления от усталости после насыщенного дня на берегу моря
 		<ul> <strong>Номера со всеми удобствами</strong>
 			<li>телевизор</li>
 			<li>холодильник</li>
@@ -96,63 +99,45 @@
 			<li>душевая кабина</li>
 			<li>туалет</li>
 			<li>удобная мебель</li>
-		</ul>
+		</ul><br>
 			В каждом номере находится ванная комната с душевой кабиной. Всегда есть горячая вода.
 			Каждый номер находится в идеальном состоянии. Периодически проводится уборка номеров (входит в оплату). 
 		</p>
-	
+	<p>Количеством номеров в категории — 2 </p>
 		<ul class="tabs-content">
 			<li class="active" id="simple1Tab">
 			<p>
-				 Бесплатные услуги
+				 <strong>Бесплатные услуги</strong>
 			</p>
 			<div class="six columns noleftmargin">
 				<p>
-					<img src="http://www.wowthemes.net/demo/studiofrancesca/images/check.png" alt=""><b>уборка в номере</b>
+					<i class="fa fa-check-square-o" aria-hidden="true"></i> уборка в номере
 				</p>
 				<p>
-					<img src="http://www.wowthemes.net/demo/studiofrancesca/images/check.png" alt=""><b>смена постельного белья</b>
+					<i class="fa fa-check-square-o" aria-hidden="true"></i> смена постельного белья
 				</p>
 				<p>
-					<img src="http://www.wowthemes.net/demo/studiofrancesca/images/check.png" alt=""><b>мангал</b>
+					<i class="fa fa-check-square-o" aria-hidden="true"></i> мангал
 				</p>
+				<p>
+					<i class="fa fa-check-square-o" aria-hidden="true"></i> бесплатный WI-FI доступ на рецепции 
+				</p>
+
 			</div>
 			<div class="six columns">
 				<p>
-					<img src="http://www.wowthemes.net/demo/studiofrancesca/images/check.png" alt=""><b>автостоянка</b>
+					<i class="fa fa-check-square-o" aria-hidden="true"></i> автостоянка
 				</p>
 				<p>
-					<img src="http://www.wowthemes.net/demo/studiofrancesca/images/check.png" alt=""><b>оборудованная кухня</b>
+					<i class="fa fa-check-square-o" aria-hidden="true"></i> оборудованная кухня
 				</p>
 				<p>
-					<img src="http://www.wowthemes.net/demo/studiofrancesca/images/check.png" alt=""><b>прачечная комната</b>
+					<i class="fa fa-check-square-o" aria-hidden="true"></i> прачечная комната
 				</p>
 			</div>
 
 			</li>
-			<li id="simple2Tab">
-			<p>
-				 Consectetur adipiscing elit. Et non ex maxima parte de tota iudicabis? Item de contrariis, a quibus ad genera formasque generum.
-			</p>
-			<p>
-				<img src="http://www.wowthemes.net/demo/studiofrancesca/images/check.png" alt=""> genera formasque
-			</p>
-			<p>
-				<img src="http://www.wowthemes.net/demo/studiofrancesca/images/check.png" alt=""> quibus ad genera
-			</p>
-			<p>
-				 Et non ex maxima parte de tota iudicabis? Item de contrariis, a quibus ad genera formasque generum venerunt. Sit enim idem caecus, debilis. Duo Reges: constructio interrete.
-			</p>
-			</li>
-			<li id="simple3Tab">
-			<p>
-				<i>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et non ex maxima parte de tota iudicabis? Item de contrariis, a quibus ad genera formasque generum."</i>
-			</p>
-			<p>
-				<i>"Adipiscing elit. Et non ex maxima parte de tota iudicabis? Item de contrariis, a quibus ad genera formasque generum."</i>
-			</p>
-			</li>
-		</ul>
+			</ul>
 	</div>
 	<!-- end main content-->
 	<!-- SLIDER-->
