--- a/GuestHouse/rooms.html
+++ b/GuestHouse/rooms.html
@@ -68,12 +68,15 @@
 </div>
 <div class="clear">
 </div>
+<!-- SUBHEADER
+================================================== -->
 <div id="subheader">
 	<div class="row">
 		<div class="twelve columns">
-			<p>
-				 Акции и специальные предложения
+			<p class="left">
+				 Наши номера
 			</p>
+			
 		</div>
 	</div>
 </div>
@@ -83,38 +86,48 @@
 ================================================== -->
 <div class="row">
 	<!-- PROJECT DESCRIPTION-->
-	<div class="six columns">
+	<div class="six columns room">
 		<div class="sectiontitle">
-			<h4>Акция длительного проживания</h4>
+			<h4>«Полулюкс»</span></h4>
 		</div>
 		<br>
-		<p>
-			 В зависимости от срока проживания, для гостей предоставляется скидка:
-<ul>
-	<li>свыше 5-и дней - 5%;</li>
-	<li>свыше 10-и дней - 10%;</li>
-	<li>свыше 15-и дней - 15%.</li>
-</ul>
-   		</p>
+		<p>В этом номере преобладает элегантная простота и уют, чтобы Ваш отдых в Бердянске был максимально комфортным и беззаботным.</p>
+<div class="img-center"><a class="room-img" href="portofoliodetail1.html"><img src="images/room.jpg" alt=""></a></div><br>
+		<ul> <strong>Номера со всеми удобствами</strong>
+			<li>телевизор</li>
+			<li>холодильник</li>
+			<li>кондиционер</li>
+			<li>душевая кабина</li>
+			<li>туалет</li>
+			<li>удобная мебель</li>
+		</ul><br>
+		</p>
+		<p>Количеством номеров в категории — 4 </p>
+	<a class="but-info" href="portofoliodetail.html">Подробнее</a><br>
 		
-		<ul class="tabs-content">
-			<li class="active" id="simple1Tab">
-			<p>
-				 Также возможны специальные условия для гостей с длительным сроком проживания..
-			</p>
-		
-			</li>
-			</ul>
 	</div>
 	<!-- end main content-->
 	<!-- SLIDER-->
-	<div class="six columns">
-		<div class="slider-wrapper theme-default">
-							<img class="promo-img" src="images/long.jpg" data-thumb="" alt=""/>
-			
-			
+	<div class="six columns room">
+		<div class="sectiontitle">
+			<h4>«Полулюкс мансандрный»</span></h4>
 		</div>
-	</div>
+		<br>
+		<p>В этом номере преобладает элегантная простота и уют, чтобы Ваш отдых в Бердянске был максимально комфортным и беззаботным.</p>
+		<div class="img-center"><a class="room-img" href="portofoliodetail1.html"><img src="images/roomm1.jpg" alt=""></a></div><br>
+		<ul> <strong>Номера со всеми удобствами</strong>
+			<li>телевизор</li>
+			<li>холодильник</li>
+			<li>кондиционер</li>
+			<li>душевая кабина</li>
+			<li>туалет</li>
+			<li>удобная мебель</li>
+		</ul><br>
+		
+		</p>
+		<p>Количеством номеров в категории — 2 </p>
+	<a class="but-info" href="portofoliodetail1.html">Подробнее</a><br>
+			</div>
 	<!-- end sliderr-->
 </div>
 <div class="hr">
