--- a/GuestHouse/contact.html
+++ b/GuestHouse/contact.html
@@ -13,8 +13,9 @@
 <title>Гостевой дом - недорогой отдых в Бердянске</title>
 <!-- CSS Files-->
 <link rel="stylesheet" href="stylesheets/style.css">
-
-<link rel="stylesheet" href="stylesheets/skins/blue.css">
+<link rel="stylesheet" href="stylesheets/cust.css">
+<link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+<link rel="stylesheet" href="stylesheets/skins/orange.css">
 <!-- skin color -->
 <link rel="stylesheet" href="stylesheets/responsive.css">
 <!-- IE Fix for HTML5 Tags -->
@@ -30,7 +31,7 @@
 	<div class="headerlogo four columns">
 		<div class="logo">
 			<a href="index.html">
-			<h4>Гостевой дом <span class="tel">+38 (050) 256 51 10</span></h4>
+			<h4>Гостевой дом «Азовец» <br> <span class="tel">+38 (050) 256 51 10</span></h4>
 			</a>
 		</div>
 	</div>
@@ -41,7 +42,7 @@
 			<a href="index.html">Главная</a>
 			</li>
 			<li>
-			<a href="rooms2.html">Номера и цены</a>
+			<a href="rooms.html">Номера и цены</a>
 			<ul>
 				<li><a href="portofoliodetail.html">Полулюкс</a></li>
 				<li><a href="portofoliodetail1.html">Полулюкс мансардный</a></li>
@@ -55,6 +56,7 @@
 			<ul>
 				<li><a href="about.html">О нас</a></li>
 				<li><a href="services.html">Услуги</a></li>
+				<li><a href="rules.html">Правила</a></li>
 			</ul>
 			</li>
 		
@@ -89,6 +91,7 @@
     <!-- GOOGLE MAP IFRAME -->
     <p>+38-(050)-256-5110 +38-(067)-811-8826 +38-(06153)-465-45</p>
     <p>Украина, г. Бердянск ул. Лермонтова, 65 </p>
+    <p>e-mail: <a href="mailto:eurotour@ukr.net">eurotour@ukr.net</a></p>
 
 	<div>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2733.5124256229956!2d36.81647615011239!3d46.75479515432079!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40e7cac842022289%3A0x9269053b83208c51!2z0L_RgNC-0LIuINCb0LXRgNC80L7QvdGC0L7QstCwLCA2NSwg0JHQtdGA0LTRj9C90YHRjNC6LCDQl9Cw0L_QvtGA0ZbQt9GM0LrQsCDQvtCx0LvQsNGB0YLRjA!5e0!3m2!1sru!2sua!4v1462740443907" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
