--- a/GuestHouse/services.html
+++ b/GuestHouse/services.html
@@ -13,8 +13,9 @@
 <title>Гостевой дом - недорогой отдых в Бердянске</title>
 <!-- CSS Files-->
 <link rel="stylesheet" href="stylesheets/style.css">
-
-<link rel="stylesheet" href="stylesheets/skins/blue.css">
+<link rel="stylesheet" href="stylesheets/cust.css">
+<link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+<link rel="stylesheet" href="stylesheets/skins/orange.css">
 <!-- skin color -->
 <link rel="stylesheet" href="stylesheets/responsive.css">
 <!-- IE Fix for HTML5 Tags -->
@@ -30,7 +31,7 @@
 	<div class="headerlogo four columns">
 		<div class="logo">
 			<a href="index.html">
-			<h4>Гостевой дом <span class="tel">+38 (050) 256 51 10</span></h4>
+			<h4>Гостевой дом «Азовец» <br> <span class="tel">+38 (050) 256 51 10</span></h4>
 			</a>
 		</div>
 	</div>
@@ -41,7 +42,7 @@
 			<a href="index.html">Главная</a>
 			</li>
 			<li>
-			<a href="rooms2.html">Номера и цены</a>
+			<a href="rooms.html">Номера и цены</a>
 			<ul>
 				<li><a href="portofoliodetail.html">Полулюкс</a></li>
 				<li><a href="portofoliodetail1.html">Полулюкс мансардный</a></li>
@@ -55,6 +56,7 @@
 			<ul>
 				<li><a href="about.html">О нас</a></li>
 				<li><a href="services.html">Услуги</a></li>
+				<li><a href="rules.html">Правила</a></li>
 			</ul>
 			</li>
 		
@@ -66,17 +68,16 @@
 	</div>
 </div>
 <div class="clear">
-</div>
-<!-- SUBHEADER
+</div><!-- SUBHEADER
 ================================================== -->
 <div id="subheader">
 	<div class="row">
 		<div class="twelve columns">
 			<p class="left">
-				 Наши услуги
+			Наши услуги
 			</p>
 			<p class="right">
-				 Все для вашего комфорта
+				 Наш гостевой дом
 			</p>
 		</div>
 	</div>
@@ -88,61 +89,54 @@
 <div class="row">
     <!-- MAIN CONTENT-->
 	<div class="eight columns">
+	    <!-- Our History-->
 		<div class="sectiontitle">
-			<h4>Сервис</h4>
-		</div>
-		<!-- Services List-->
-		<div class=" columns ">			
-			
-			<p>	
+			<h4>Наши услуги</h4>
+		</div><br>
+		<p>	
 			 Мы обеспечим все условия для Вашей успешной работы и хорошего отдыха!
 			Доброжелательность и вежливость персонала сделают Ваше взаимодействие с ними приятным во всех отношениях: Вы не только получите максимум помощи, но и заряд хорошего настроения на весь день
-			</p>
-		</div>
-		<div class="clear">
-		</div>
-		<br/>
-		<div class="panel">
-			<p>
-				<b>К услугам гостей</b>
-				<ul>
-					<li>професиональный обслуживающий персонал</li>
-					<li>быстрая процедура поселения/выселения</li>
-					<li>бесплатный Wi-Fi по всему отелю</li>
-					<li>охраняемый паркинг</li>
-					<li>организация трансфера</li>
-					<li>вызов неотложной медпомощи</li>
-					<li>вызов такси</li>
-					<li>услуги прачечной</li>
-				</ul>
-			</p>
-			<p>Наряду с услугами, входящими в стоимость проживания, Мы предлагаем дополнительные услуги, за отдельную плату. К таким услугам относится трехразовое питание. Стоимость данной услуги является договорной и зависит от личных предпочтений отдыхающего. Мы учитываем все пожелания наших отдыхающих. </p>
-		</div>		
+			</p>				
+			<p><strong>К услугам гостей</strong><br></p>
+				
+					<p><i class="fa fa-check-square-o" aria-hidden="true"></i> професиональный обслуживающий персонал</p>
+					<p><i class="fa fa-check-square-o" aria-hidden="true"></i> быстрая процедура поселения/выселения</p>
+					<p><i class="fa fa-check-square-o" aria-hidden="true"></i> бесплатный Wi-Fi по всему отелю</p>
+					<p><i class="fa fa-check-square-o" aria-hidden="true"></i> охраняемый паркинг</p>
+					<p><i class="fa fa-check-square-o" aria-hidden="true"></i> организация трансфера</p>
+					<p><i class="fa fa-check-square-o" aria-hidden="true"></i> вызов неотложной медпомощи</p>
+					<p><i class="fa fa-check-square-o" aria-hidden="true"></i> вызов такси</p>
+					<p><i class="fa fa-check-square-o" aria-hidden="true"></i> услуги прачечной</p>
+				
+			
+			<p>Наряду с услугами, входящими в стоимость проживания, Мы предлагаем дополнительные услуги, за отдельную плату.</p>
+			 <p>К таким услугам относится трехразовое питание. </p>
+			 <p>Стоимость данной услуги является договорной и зависит от личных предпочтений отдыхающего. Мы учитываем все пожелания наших отдыхающих. </p>		
+			<br/>
+		<!-- Accordion-->
+		
 	</div><!-- end main content-->
-	
-    <!-- SIDEBAR-->
-	<div class="four columns">
-	    <!-- Free Quote Form-->
-		<h5>Ваши пожелания</h5>
-		<p>
-			Если у вас есть предложения и пожелания для улучшения вашего отдыха, пожалуйста, напишите нам	
-		</p>
-		<div class="done">
-				<div class="alert-box success">
-				 Message has been sent! <a href="" class="close">x</a>
-				</div>
+
+	<!-- SIDEBAR-->
+	<div id="service" class="four columns">
+		<div class="teambox">
+			<img src="images/sea.png" style="width: 30%" alt="">
+			<img src="images/21.png" style="width: 30%" alt="">
+			<img src="images/gla.png" style="width: 30%" alt="">
 		</div>
-		<div class="form">
-			<form method="post" action="contact.php" id="contactform">
-				<input type="text" name="name" class="smoothborder" placeholder="Ваше имя"/>
-				<input type="text" name="email" class="smoothborder" placeholder="Ваш E-mail "/>
-				<textarea name="comment" class="smoothborder" rows="6" placeholder="Опишите пожелания"></textarea>
-				<input type="submit" id="submit" class="readmore" value="Отправить">
-			</form>
-		</div>
-		<br/>
-	
-	</div><!-- end sidebar-->
+			<div class="teambox">
+				<img src="images/parking.png" style="width: 30%" alt="">
+				<img src="images/wifi.png" style="width: 30%" alt="">
+				<img src="images/food.png" style="width: 30%" alt="">
+			</div>
+			<div class="teambox">
+				<img src="images/trans.png" style="width: 30%" alt="">
+				<img src="images/taxi.png" style="width: 30%" alt="">
+				<img src="images/LIKE.png" style="width: 30%" alt="">
+			</div>
+			
+	</div><!-- end sidebar -->
+	</div>
 </div>
 <div class="hr">
 </div>
@@ -155,37 +149,23 @@
 		<a href="#top"><span></span></a>
 	</p>
 	<div class="four columns">
-		<h1>ABOUT US</h1>
-		 Our goal is to keep clients satisfied!
+		<h4>Наше кредо</h4>
+		 Приемлемые цены на отдых в Бердянске на берегу Азовского моря в уютных номерах
 	</div>
 	<div class="four columns">
-		<h1>GET SOCIAL</h1>
+		<h4>Мы в соц. сетях</h4>
 		<a class="social facebook" href="#"></a>
 		<a class="social twitter" href="#"></a>
-		<a class="social deviantart" href="#"></a>
-		<a class="social flickr" href="#"></a>
-		<a class="social dribbble" href="#"></a>
-	</div>
-	<div class="four columns">
-		<h1 class="newsmargin">NEWSLETTER</h1>
-		<div class="row collapse newsletter floatright">
-			<div class="ten mobile-three columns">
-				<input type="text" class="nomargin" placeholder="Enter your e-mail address...">
-			</div>
-			<div class="two mobile-one columns">
-				<a href="#" class="postfix button expand">GO</a>
-			</div>
-		</div>
 	</div>
 	</footer>
 </div>
 <div class="copyright">
 	<div class="row">
 		<div class="six columns">
-			 &copy;<span class="small"> Copyright 2015 Your Agency Name</span>
+			 &copy;<span class="small"> Copyright Constantin studio</span>
 		</div>
 		<div class="six columns">
-			<span class="small floatright"> Template by <a href="www.wowthemes.net">WowThemes.net</a></span>
+			<span class="small floatright">Constantin design <a href="#">Constantin studio</a> </span>
 		</div>
 	</div>
 </div>
