--- a/GuestHouse/promo.html
+++ b/GuestHouse/promo.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="stylesheets/style.css">
 <link rel="stylesheet" href="stylesheets/cust.css">
 <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
-<link rel="stylesheet" href="stylesheets/skins/orange.css">
+<link rel="stylesheet" href="stylesheets/skins/blue.css">
 <!-- skin color -->
 <link rel="stylesheet" href="stylesheets/responsive.css">
 <!-- IE Fix for HTML5 Tags -->
@@ -26,6 +26,7 @@
 <body>
 <!-- HIDDEN PANEL 
 ================================================== -->
+<div class="header-wrapper">	
 <div class="row">
 	<div class="headerlogo four columns">
 		<div class="logo">
@@ -68,6 +69,7 @@
 </div>
 <div class="clear">
 </div>
+</div>
 <div id="subheader">
 	<div class="row">
 		<div class="twelve columns">
@@ -81,30 +83,61 @@
 </div>
 <!-- CONTENT 
 ================================================== -->
-<div class="row">
+	<div class="row bord-bot">
+	<div class="six columns">
+		<div class="sectiontitle">
+			<h4>Программа лояльности</h4>
+		</div>
+		<br>
+	
+<div class="room">
+<p><strong>Уважаемый гость!</strong></p>
+   						
+			<p>Посещая наши отели раз, Вы включаетесь в программу лояльности к клиенту, обеспечивающую Вам постоянную скидку в размере 8% от стоимости номера..</p>
+			<p>Программа действует для бронирований, совершенных без посредников (только на сайте сети или гостиницы, или в центральном отделе бронирования).</p>
+			<p>Скидки по данному предложению не суммируются с другими акциями и спецпредложениями отеля, а также со скидками программы лояльности.</p>
+
+			
+			</div>
+	</div>
+	<!-- end main content-->
+	<!-- SLIDER-->
+	<div class="six columns">
+		<div class="slider-wrapper theme-default">
+							<img class="promo-img" src="images/loyal.jpg" data-thumb="" alt=""/>
+			
+			
+		</div>
+	</div>
+	</div><br>
+	<!---PROMO 2-->
+	
 	<!-- PROJECT DESCRIPTION-->
+	<div class="row bord-bot">
 	<div class="six columns">
 		<div class="sectiontitle">
 			<h4>Акция длительного проживания</h4>
 		</div>
 		<br>
 		<p>
-			 В зависимости от срока проживания, для гостей предоставляется скидка:
+			 Длительное проживание - больше скидка! 
+<div class="room">
 <ul>
-	<li>свыше 5-и дней - 5%;</li>
-	<li>свыше 10-и дней - 10%;</li>
-	<li>свыше 15-и дней - 15%.</li>
-</ul>
+	<li>При бронировании проживания от 21 дня скидка – 10%</li>
+	<li>При бронировании длительного проживания от 31 дня скидка – 15%. </li>
+	</ul>
    		</p>
 		
 		<ul class="tabs-content">
 			<li class="active" id="simple1Tab">
 			<p>
-				 Также возможны специальные условия для гостей с длительным сроком проживания..
+				 Акция действует для бронирований, совершенных без посредников (только на сайте сети или гостиницы, или в центральном отделе бронирования).
 			</p>
+			<p>Скидки по данному предложению не суммируются с другими акциями и спецпредложениями отеля, а также со скидками программы лояльности.</p>
 		
 			</li>
 			</ul>
+			</div>
 	</div>
 	<!-- end main content-->
 	<!-- SLIDER-->
@@ -114,6 +147,7 @@
 			
 			
 		</div>
+	</div>
 	</div>
 	<!-- end sliderr-->
 </div>
