--- a/GuestHouse/index.html
+++ b/GuestHouse/index.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="stylesheets/style.css">
 <link rel="stylesheet" href="stylesheets/cust.css">
 <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
-<link rel="stylesheet" href="stylesheets/skins/orange.css">
+<link rel="stylesheet" href="stylesheets/skins/blue.css">
 <!-- skin color -->
 <link rel="stylesheet" href="stylesheets/responsive.css">
 <!-- IE Fix for HTML5 Tags -->
@@ -28,6 +28,7 @@
 
 <!-- HEADER
 ================================================== -->
+<div class="header-wrapper">	
 <div class="row">
 	<div class="headerlogo four columns">
 		<div class="logo">
@@ -69,6 +70,7 @@
 	</div>
 </div>
 <div class="clear">
+</div>
 </div>
 <!-- SLIDER
 ================================================== -->
