--- a/GuestHouse/portofoliodetail.html
+++ b/GuestHouse/portofoliodetail.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="stylesheets/style.css">
 <link rel="stylesheet" href="stylesheets/cust.css">
 <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
-<link rel="stylesheet" href="stylesheets/skins/orange.css">
+<link rel="stylesheet" href="stylesheets/skins/blue.css">
 <!-- skin color -->
 <link rel="stylesheet" href="stylesheets/responsive.css">
 <!-- IE Fix for HTML5 Tags -->
@@ -26,6 +26,7 @@
 <body>
 <!-- HIDDEN PANEL 
 ================================================== -->
+<div class="header-wrapper">	
 <div class="row">
 	<div class="headerlogo four columns">
 		<div class="logo">
@@ -67,6 +68,7 @@
 	</div>
 </div>
 <div class="clear">
+</div>
 </div>
 <!-- SUBHEADER
 ================================================== -->
@@ -144,6 +146,8 @@
 	<!-- SLIDER-->
 	<div class="six columns">
 		<div class="slider-wrapper theme-default">
+		
+
 			<div id="slider" class="nivoSlider detailslider">
 				<img src="images/room.jpg" data-thumb="" alt=""/>
 				<img src="images/room1.jpg" data-thumb="" alt=""/>
@@ -151,6 +155,11 @@
 			</div>
 		</div>
 	</div>
+	<h4>Стоимость номера:</h4><br>
+		<p><strong class="strong-price">450 грн</strong> в период с 01.09.2016 по 31.05.2017</p>
+		<p><strong class="strong-price">500 грн</strong> в период с 01.06.2016 по 31.08.2016</p>
+		<p><strong>Забронировать номер</strong> можете по телефонам +38-(050)-256-5110 <br> +38-(067)-811-8826 +38-(06153)-465-45,<br>
+		 так же по электронной почте <a href="mailto:eurotour@ukr.net">eurotour@ukr.net</a></p>
 	<!-- end sliderr-->
 </div>
 <div class="hr">
