--- a/GuestHouse/rooms.html
+++ b/GuestHouse/rooms.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="stylesheets/style.css">
 <link rel="stylesheet" href="stylesheets/cust.css">
 <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
-<link rel="stylesheet" href="stylesheets/skins/orange.css">
+<link rel="stylesheet" href="stylesheets/skins/blue.css">
 <!-- skin color -->
 <link rel="stylesheet" href="stylesheets/responsive.css">
 <!-- IE Fix for HTML5 Tags -->
@@ -26,6 +26,7 @@
 <body>
 <!-- HIDDEN PANEL 
 ================================================== -->
+<div class="header-wrapper">	
 <div class="row">
 	<div class="headerlogo four columns">
 		<div class="logo">
@@ -67,6 +68,7 @@
 	</div>
 </div>
 <div class="clear">
+</div>
 </div>
 <!-- SUBHEADER
 ================================================== -->
