--- a/GuestHouse/rooms2.html
+++ b/GuestHouse/rooms2.html
@@ -25,11 +25,12 @@
 
 <!-- HEADER
 ================================================== -->
+<div class="header-wrapper">	
 <div class="row">
 	<div class="headerlogo four columns">
 		<div class="logo">
 			<a href="index.html">
-			<h4>Гостевой дом <span class="tel">+38 (050) 256 51 10</span></h4>
+			<h4>Гостевой дом «Азовец» <br> <span class="tel">+38 (050) 256 51 10</span></h4>
 			</a>
 		</div>
 	</div>
@@ -40,7 +41,7 @@
 			<a href="index.html">Главная</a>
 			</li>
 			<li>
-			<a href="rooms2.html">Номера и цены</a>
+			<a href="rooms.html">Номера и цены</a>
 			<ul>
 				<li><a href="portofoliodetail.html">Полулюкс</a></li>
 				<li><a href="portofoliodetail1.html">Полулюкс мансардный</a></li>
@@ -54,6 +55,7 @@
 			<ul>
 				<li><a href="about.html">О нас</a></li>
 				<li><a href="services.html">Услуги</a></li>
+				<li><a href="rules.html">Правила</a></li>
 			</ul>
 			</li>
 		
@@ -65,6 +67,7 @@
 	</div>
 </div>
 <div class="clear">
+</div>
 </div>
 <!-- SUBHEADER
 ================================================== -->
