--- a/GuestHouse/contact.html
+++ b/GuestHouse/contact.html
@@ -32,7 +32,7 @@
 	<div class="headerlogo four columns">
 		<div class="logo">
 			<a href="index.html">
-			<h4>Гостевой дом «Азовец» <br> <span class="tel">+38 (050) 256 51 10</span></h4>
+			<h4>Гостевой дом «Азовец» <br> <span class="tel"><a href="tel:+380502565110">+38 (050) 256 51 10</a></span></h4>
 			</a>
 		</div>
 	</div>
@@ -91,7 +91,9 @@
 ================================================== -->
 <div class="row">
     <!-- GOOGLE MAP IFRAME -->
-    <p>+38-(050)-256-5110 +38-(067)-811-8826 +38-(06153)-465-45</p>
+    <p><a href="tel:+380502565110">+38-(050)-256-5110</a> <img src="images/life.png" width="12px;"></p>
+    <p><a href="tel:+380678118826">+38-(067)-811-8826</a> <img src="images/mts.png" width="12px;"></p>  
+    <p><a href="tel:+380615346545">+38-(06153)-465-45</a> <img src="images/phone.png" width="12px;"></p>
     <p>Украина, г. Бердянск ул. Лермонтова, 65 </p>
     <p>e-mail: <a href="mailto:eurotour@ukr.net">eurotour@ukr.net</a></p>
 
