--- a/GuestHouse/index.html
+++ b/GuestHouse/index.html
@@ -33,7 +33,7 @@
 	<div class="headerlogo four columns">
 		<div class="logo">
 			<a href="index.html">
-			<h4>Гостевой дом «Азовец» <br> <span class="tel">+38 (050) 256 51 10</span></h4>
+			<h4>Гостевой дом «Азовец» <br> <span class="tel"><a href="tel:+380502565110">+38 (050) 256 51 10</a></span></h4>
 			</a>
 		</div>
 	</div>
