--- a/GuestHouse/portofoliodetail.html
+++ b/GuestHouse/portofoliodetail.html
@@ -31,7 +31,7 @@
 	<div class="headerlogo four columns">
 		<div class="logo">
 			<a href="index.html">
-			<h4>Гостевой дом «Азовец» <br> <span class="tel">+38 (050) 256 51 10</span></h4>
+			<h4>Гостевой дом «Азовец» <br> <span class="tel"><a href="tel:+380502565110">+38 (050) 256 51 10</a></span></h4>
 			</a>
 		</div>
 	</div>
@@ -149,6 +149,7 @@
 		
 
 			<div id="slider" class="nivoSlider detailslider">
+			<img src="images/room (5).jpg" data-thumb="" alt=""/>
 				<img src="images/room.jpg" data-thumb="" alt=""/>
 				<img src="images/room1.jpg" data-thumb="" alt=""/>
 				<img src="images/room2.jpg" data-thumb="" alt=""/>
