--- a/GuestHouse/rooms.html
+++ b/GuestHouse/rooms.html
@@ -31,7 +31,7 @@
 	<div class="headerlogo four columns">
 		<div class="logo">
 			<a href="index.html">
-			<h4>Гостевой дом «Азовец» <br> <span class="tel">+38 (050) 256 51 10</span></h4>
+			<h4>Гостевой дом «Азовец» <br> <span class="tel"><a href="tel:+380502565110">+38 (050) 256 51 10</a></span></h4>
 			</a>
 		</div>
 	</div>
@@ -94,7 +94,7 @@
 		</div>
 		<br>
 		<p>В этом номере преобладает элегантная простота и уют, чтобы Ваш отдых в Бердянске был максимально комфортным и беззаботным.</p>
-<div class="img-center"><a class="room-img" href="portofoliodetail1.html"><img src="images/room.jpg" alt=""></a></div><br>
+<div class="img-center"><a class="room-img" href="portofoliodetail1.html"><img src="images/room (5).jpg" alt=""></a></div><br>
 		<ul> <strong>Номера со всеми удобствами</strong>
 			<li>телевизор</li>
 			<li>холодильник</li>
@@ -116,7 +116,7 @@
 		</div>
 		<br>
 		<p>В этом номере преобладает элегантная простота и уют, чтобы Ваш отдых в Бердянске был максимально комфортным и беззаботным.</p>
-		<div class="img-center"><a class="room-img" href="portofoliodetail1.html"><img src="images/roomm1.jpg" alt=""></a></div><br>
+		<div class="img-center"><a class="room-img" href="portofoliodetail1.html"><img src="images/roomm3.jpg" alt=""></a></div><br>
 		<ul> <strong>Номера со всеми удобствами</strong>
 			<li>телевизор</li>
 			<li>холодильник</li>
