--- a/GuestHouse/beneffit.html
+++ b/GuestHouse/beneffit.html
@@ -24,7 +24,8 @@
   <![endif]-->
 </head>
 <body>
-<!-- HIDDEN PANEL 
+
+<!-- HEADER
 ================================================== -->
 <div class="header-wrapper">	
 <div class="row">
@@ -70,16 +71,17 @@
 </div>
 <div class="clear">
 </div>
-</div>
-<!-- SUBHEADER
+</div><!-- SUBHEADER
 ================================================== -->
 <div id="subheader">
 	<div class="row">
 		<div class="twelve columns">
 			<p class="left">
-				 Наши номера
+			Бердянск место оздоровления
 			</p>
-			
+			<p class="right">
+				 Отдохните с пользой для здоровья вас и ваших деток 
+			</p>
 		</div>
 	</div>
 </div>
@@ -88,50 +90,33 @@
 <!-- CONTENT 
 ================================================== -->
 <div class="row">
-	<!-- PROJECT DESCRIPTION-->
-	<div class="six columns room">
+    <!-- MAIN CONTENT-->
+	<div class="eight columns">
+	    <!-- Our History-->
 		<div class="sectiontitle">
-			<h4>«Полулюкс»</span></h4>
+			<h4>Отдохни с пользой</h4>
+		</div><br>
+		<p>Люди, которые хотят уделить внимание своему здоровью, непременно должны <strong>отдохнуть в Бердянске.</strong></p>
+		<p>Теплая морская вода и благоприятные климатические условия позволяют насладиться талассотерапией. Плавание, как известно, оказывает благотворное воздействие на сердечнососудистую систему, совершенствует ритм и глубину дыхания, укрепляет мышцы сердца. Благодаря умеренной концентрации соли вода в Азовском море вытягивает из организма всю «вредную» слизь, оказывает антибактериальное действие.</p>
+
+<p><strong>Аэротерпаия</strong> – еще одна процедура, которую можно провести, отдыхая в Бердянске. Открытый воздух охлаждает кожные рецепторы, повышает порог чувствительности, совершенствует терморегуляционные процессы. В результате организм повышает сопротивляемость, становится устойчив к простудным заболеваниям, воздействию перепадов температур. Кроме того, даже само нахождение на открытом воздухе производит благоприятное психоэмоциональное воздействие на человека.</p>
+<p>Помимо всего вышеперечисленного во время отдыха в Бердянске можно насладиться <strong>грязелечением</strong> или <strong>псаммотерапией</strong> (лечением нагретым песком).</p>
+			
+	</div><!-- end main content-->
+
+	<!-- SIDEBAR-->
+	<div class="four columns">
+		<div class="teamwrap teambox">
+			<img src="images/gr.jpg" style="width: 100%" alt="">
 		</div>
-		<br>
-		<p>В этом номере преобладает элегантная простота и уют, чтобы Ваш отдых в Бердянске был максимально комфортным и беззаботным.</p>
-<div class="img-center"><a class="room-img" href="portofoliodetail1.html"><img src="images/room (5).jpg" alt=""></a></div><br>
-		<ul> <strong>Номера со всеми удобствами</strong>
-			<li>телевизор</li>
-			<li>холодильник</li>
-			<li>кондиционер</li>
-			<li>душевая кабина</li>
-			<li>туалет</li>
-			<li>удобная мебель</li>
-		</ul><br>
-		</p>
-		<p>Количеством номеров в категории — 4 </p>
-	<a class="but-info" href="portofoliodetail.html">Подробнее</a><br>
-		
-	</div>
-	<!-- end main content-->
-	<!-- SLIDER-->
-	<div class="six columns room">
-		<div class="sectiontitle">
-			<h4>«Полулюкс мансандрный»</span></h4>
-		</div>
-		<br>
-		<p>В этом номере преобладает элегантная простота и уют, чтобы Ваш отдых в Бердянске был максимально комфортным и беззаботным.</p>
-		<div class="img-center"><a class="room-img" href="portofoliodetail1.html"><img src="images/roomm3.jpg" alt=""></a></div><br>
-		<ul> <strong>Номера со всеми удобствами</strong>
-			<li>телевизор</li>
-			<li>холодильник</li>
-			<li>кондиционер</li>
-			<li>душевая кабина</li>
-			<li>туалет</li>
-			<li>удобная мебель</li>
-		</ul><br>
-		
-		</p>
-		<p>Количеством номеров в категории — 2 </p>
-	<a class="but-info" href="portofoliodetail1.html">Подробнее</a><br>
+			<div class="teamwrap teambox">
+				<img src="images/sand.jpg" style="width: 100%" alt="">
 			</div>
-	<!-- end sliderr-->
+			<div class="teamwrap teambox">
+				<img src="images/plyazh.jpg" style="width: 100%" alt="">
+			</div>
+			
+	</div><!-- end sidebar -->
 </div>
 <div class="hr">
 </div>
@@ -167,8 +152,10 @@
 <!-- JAVASCRIPTS 
 ================================================== -->
 <!-- Javascript files placed here for faster loading -->
-<!-- Javascript files placed here for faster loading -->
 <script src="javascripts/foundation.min.js"></script>
+<script src="javascripts/jquery.easing.1.3.js"></script>
+<script src="javascripts/elasticslideshow.js"></script>
+<script src="javascripts/jquery.carouFredSel-6.0.5-packed.js"></script>
 <script src="javascripts/jquery.cycle.js"></script>
 <script src="javascripts/app.js"></script>
 <script src="javascripts/modernizr.foundation.js"></script>
@@ -177,6 +164,5 @@
 <script src="javascripts/hoverIntent.js"></script>
 <script src="javascripts/superfish.js"></script>
 <script src="javascripts/responsivemenu.js"></script>
-<script src="javascripts/elasticslideshow.js"></script>
 </body>
 </html>
