--- a/GuestHouse/index.html
+++ b/GuestHouse/index.html
@@ -59,6 +59,7 @@
 				<li><a href="about.html">О нас</a></li>
 				<li><a href="services.html">Услуги</a></li>
 				<li><a href="rules.html">Правила</a></li>
+				<li><a href="beneffit.html">Отдых с пользой</a></li>
 			</ul>
 			</li>
 		
@@ -215,7 +216,7 @@
 			<span class="ca-icon"><i class="fa fa-camera"></i></span>
 			<div class="ca-content">
 				<h2 class="ca-main">Красивая<br/> природа</h2>
-				<h3 class="ca-sub">Море и пляж</h3>
+				<h3 class="ca-sub">Отдых с пользой для здоровья</h3>
 			</div>
 			</a>
 			</li>
