--- a/GuestHouse/portofoliodetail.html
+++ b/GuestHouse/portofoliodetail.html
@@ -57,6 +57,7 @@
 				<li><a href="about.html">О нас</a></li>
 				<li><a href="services.html">Услуги</a></li>
 				<li><a href="rules.html">Правила</a></li>
+				<li><a href="beneffit.html">Отдых с пользой</a></li>
 			</ul>
 			</li>
 		
