--- a/GuestHouse/rules.html
+++ b/GuestHouse/rules.html
@@ -58,6 +58,7 @@
 				<li><a href="about.html">О нас</a></li>
 				<li><a href="services.html">Услуги</a></li>
 				<li><a href="rules.html">Правила</a></li>
+				<li><a href="beneffit.html">Отдых с пользой</a></li>
 			</ul>
 			</li>
 		
