--- a/GuestHouse/portofoliodetail.html
+++ b/GuestHouse/portofoliodetail.html
@@ -150,7 +150,7 @@
 		
 
 			<div id="slider" class="nivoSlider detailslider">
-				<img src="images/room(5).jpg" data-thumb="" alt=""/>
+				<img src="images/room(5).JPG" data-thumb="" alt=""/>
 				<img src="images/room.jpg" data-thumb="" alt=""/>
 				<img src="images/room1.jpg" data-thumb="" alt=""/>
 				<img src="images/room2.jpg" data-thumb="" alt=""/>
