--- a/GuestHouse/index.html
+++ b/GuestHouse/index.html
@@ -103,6 +103,7 @@
 		<div class="ei-title">
 			<h2>Наслаждаться</h2>
 			<h3>Уютом</h3>
+			<h2 class="red-price">Всего от 500грн</h2>
 		</div>
 		</li>
 		<li>
