--- a/GuestHouse/promo.html
+++ b/GuestHouse/promo.html
@@ -168,8 +168,7 @@
 	</div>
 	<div class="four columns">
 		<h4>Мы в соц. сетях</h4>
-		<a class="social facebook" href="#"></a>
-		<a class="social twitter" href="#"></a>
+		<a class="social facebook" href="https://www.facebook.com/GostevojDomAzovec/"></a>
 	</div>
 	</footer>
 </div>
