--- a/GuestHouse/index.html
+++ b/GuestHouse/index.html
@@ -240,9 +240,8 @@
 	</div>
 	<div class="four columns">
 		<h4>Мы в соц. сетях</h4>
-		<a class="social facebook" href="#"></a>
-		<a class="social twitter" href="#"></a>
-	</div>
+		<a class="social facebook" href="https://www.facebook.com/GostevojDomAzovec/"></a>
+		</div>
 	</footer>
 </div>
 <div class="copyright">
