--- a/ZalDnepr/index.html
+++ b/ZalDnepr/index.html
@@ -195,17 +195,17 @@
                 <div class="col-sm-12 col-md-12 col-lg-12" >
 					<div class="wow fadeInRight" data-wow-delay="0.4s">
                     <div id="owl-works" class="owl-carousel">
-                        <div class="item"><a href="img/gallery/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/1.jpg" class="img-responsive" alt="img"></a></div>
-                        <div class="item"><a href="img/gallery/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/2.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/gallery/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/3.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/gallery/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/4.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/gallery/5.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/5.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/gallery/6.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/6.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/gallery/7.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/7.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/gallery/8.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/8.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/gallery/9.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/9.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/gallery/10.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/10.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/gallery/11.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery/11.jpg" class="img-responsive " alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/1.jpg" class="img-responsive" alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/2.jpg" class="img-responsive " alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/3.jpg" class="img-responsive " alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/4.jpg" class="img-responsive " alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/5.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/5.jpg" class="img-responsive " alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/6.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/6.jpg" class="img-responsive " alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/7.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/7.jpg" class="img-responsive " alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/8.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/8.jpg" class="img-responsive " alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/9.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/9.jpg" class="img-responsive " alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/10.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/10.jpg" class="img-responsive " alt="img"></a></div>
+                        <div class="item"><a href="img/gallery1/11.jpg" title="This is an image title" data-lightbox-gallery="gallery1"><img src="img/gallery1/11.jpg" class="img-responsive " alt="img"></a></div>
                         
                     </div>
 					</div>
