--- a/ZalDnepr/index.html
+++ b/ZalDnepr/index.html
@@ -32,7 +32,7 @@
     <section id="intro" class="intro">
 	
 		<div class="slogan">
-			<a href="index.html"><img class="wow fadeInDown" data-wow-delay="0.6s" src="img/logo1.png" width="300px"alt="" /></a>
+			<a href="index.html"><img class="wow fadeInDown" data-wow-delay="0.6s" src="img/logo11.png" width="300px"alt="" /></a>
 		</div>
 		<div class="page-scroll">
 			<a href="#about">
@@ -95,7 +95,7 @@
 			<div class="row">
 				<div class="col-md-6">
 				
-					<img src="img/img1.jpg" class="img-responsive img-rounded" alt="" />
+					<img src="img/img11.jpg" class="img-responsive img-rounded" alt="" />
 				</div>		
 				<div class="col-md-6">
 					<p><strong>Светлый просторный конференц-зал с дневным освещением, оптимально подойдет для провидения различных мероприятий: конференций, семинаров, собраний. </strong></p>
@@ -139,7 +139,7 @@
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="align-center txt-shadow wow fadeInLeft" data-wow-delay="0.2s">
 							<div class="icon">
-								<img src="img/project.png" width="128px;" alt="">
+								<img src="img/project1.png" width="128px;" alt="">
 							</div>
 						<span class="color-white">Проэктор</span>
 						</div>
@@ -147,7 +147,7 @@
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="align-center txt-shadow wow fadeInLeft" data-wow-delay="0.4s">
 							<div class="icon">
-								<img src="img/screen.png" width="128px;" alt="">
+								<img src="img/screen1.png" width="128px;" alt="">
 							</div>
 						<span class="color-white">Экран</span>
 						</div>
@@ -155,7 +155,7 @@
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="align-center txt-shadow wow fadeInLeft" data-wow-delay="0.6s">
 							<div class="icon">
-								<img src="img/wifi.png" width="128px;" alt="">
+								<img src="img/wifi1.png" width="128px;" alt="">
 							</div>
 						<span class="color-white">Высокоскоростной интернет</span>
 						</div>
@@ -163,7 +163,7 @@
 					<div class="col-xs-6 col-sm-3 col-md-3">
 						<div class="align-center txt-shadow wow fadeInLeft" data-wow-delay="0.8s">
 							<div class="icon">
-								<img src="img/tech.png" width="128px;" alt="">
+								<img src="img/tech1.png" width="128px;" alt="">
 							</div>
 						<span class="color-white">Техническая поддержка</span>
 						</div>
@@ -232,7 +232,7 @@
 					<p class="wow lightSpeedIn" data-wow-delay="0.3s">Ожидаем ваше сообщение</p>
 					</div>
 					<div class="form-wrapper marginbot-50">
-                <form id="contact-form">
+                <form id="contact-form" class="wow fadeInLeft" data-wow-delay="0.8s">
                 <div class="row">
     
                         <div class="form-group">
@@ -272,11 +272,11 @@
 					</div>
 					<p class="wow lightSpeedIn" data-wow-delay="0.3s">Карта проезда</p>
 					</div>
-					<div class="text-center">
-					<p><i class="fa fa-phone"></i> +38 (067) 792 64 72 Денисенко Надежда </p>
+					<div class="text-center wow fadeInLeft" data-wow-delay="0.4s">
+					<p><i class="fa fa-phone"></i> +38 (067) 792 64 72 Надежда </p>
 					<p>02000, г. Киев, улица Сортировочная, 5</p>
 			</div>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2542.2686199176383!2d30.606473036943658!3d50.417466651628814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c59e026919bb%3A0x78c41f225e3bb4ba!2z0LLRg9C7LiDQodC-0YDRgtGD0LLQsNC70YzQvdCwLCA1LCDQmtC40ZfQsg!5e0!3m2!1sru!2sua!4v1464077527608" width="100%" height="350" frameborder="0" style="border:1px solid #FF9933 " allowfullscreen></iframe>
+			<iframe class="text-center wow fadeInLeft" data-wow-delay="0.8s"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2542.2686199176383!2d30.606473036943658!3d50.417466651628814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c59e026919bb%3A0x78c41f225e3bb4ba!2z0LLRg9C7LiDQodC-0YDRgtGD0LLQsNC70YzQvdCwLCA1LCDQmtC40ZfQsg!5e0!3m2!1sru!2sua!4v1464077527608" width="100%" height="350" frameborder="0" style="border:1px solid #FF9933 " allowfullscreen></iframe>
 			 </div>
 			</div>
 			
